--- a/JPasswortBunker/src/jpasswortbunker/mgm/gui/MainInterface.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/gui/MainInterface.fxml
@@ -1,74 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.gui.MainInterfaceController">
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.gui.MainInterfaceController">
    <children>
-      <VBox prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane layoutX="-2.0" prefHeight="400.0" prefWidth="200.0">
          <children>
-            <MenuBar>
-              <menus>
-                <Menu fx:id="btn_File" mnemonicParsing="false" text="File">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
-                        <Menu fx:id="btn_Settings" mnemonicParsing="false" text="Settings">
-                           <items>
-                              <Menu fx:id="btn_Language" mnemonicParsing="false" text="Language">
-                                <items>
-                                  <MenuItem mnemonicParsing="false" onAction="#btn_lang_en" text="Englisch" />
-                                    <MenuItem mnemonicParsing="false" onAction="#btn_lang_de" text="Deutsch" />
-                                </items>
-                              </Menu>
-                           </items>
-                        </Menu>
-                        <SeparatorMenuItem mnemonicParsing="false" />
-                  </items>
-                </Menu>
-                <Menu fx:id="btn_Edit" mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                <Menu fx:id="btn_Help" mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
-            <ToolBar prefHeight="17.0" prefWidth="600.0">
-              <items>
-                  <ImageView fitHeight="25.0" fitWidth="25.0" onMouseClicked="#save" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/save.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="25.0" fitWidth="25.0" onMouseClicked="#newEntry" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/new.png" />
-                     </image>
-                  </ImageView>
-                  <Button mnemonicParsing="false" onAction="#test" text="Button" />
-              </items>
-            </ToolBar>
-            <SplitPane dividerPositions="0.23411371237458195" prefHeight="349.0" prefWidth="600.0">
-               <items>
-                  <ScrollPane prefHeight="325.0" prefWidth="137.0" />
-                  <ScrollPane prefHeight="342.0" prefWidth="455.0">
-                     <content>
-                        <Label fx:id="labelTest" prefHeight="144.0" prefWidth="450.0">
-                           <font>
-                              <Font size="66.0" />
-                           </font>
-                        </Label>
-                     </content></ScrollPane>
-               </items>
-            </SplitPane>
+            <JFXButton layoutX="10.0" layoutY="75.0" prefHeight="44.0" prefWidth="181.0" text="Button">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
          </children>
-      </VBox>
+      </AnchorPane>
+      <AnchorPane layoutX="201.0" prefHeight="400.0" prefWidth="400.0" />
    </children>
 </AnchorPane>
