--- a/JPasswortBunker/src/jpasswortbunker/mgm/gui/MainInterface.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/gui/MainInterface.fxml
@@ -1,20 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.gui.MainInterfaceController">
+<AnchorPane prefHeight="548.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.gui.MainInterfaceController">
    <children>
-      <AnchorPane layoutX="-2.0" prefHeight="400.0" prefWidth="200.0">
+      <AnchorPane layoutX="-3.0" prefHeight="548.0" prefWidth="201.0" style="-fx-background-color: #0747A6;">
          <children>
-            <JFXButton layoutX="10.0" layoutY="75.0" prefHeight="44.0" prefWidth="181.0" text="Button">
+            <JFXButton fx:id="btn_finance" layoutX="11.0" layoutY="65.0" onAction="#btn_finance" prefHeight="49.0" prefWidth="178.0" text="   Finance" textFill="WHITE">
                <font>
-                  <Font size="18.0" />
+                  <Font size="24.0" />
                </font>
+               <graphic>
+                  <ImageView fitHeight="29.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/dollar_icon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <JFXButton fx:id="btn_social" layoutX="11.0" layoutY="120.0" onAction="#btn_social" prefHeight="49.0" prefWidth="178.0" text="   Social" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="36.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/User-Group.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <JFXButton layoutX="11.0" layoutY="176.0" onAction="#test" prefHeight="49.0" prefWidth="178.0" text="   E-Mail" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="34.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/letter.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <JFXButton layoutX="11.0" layoutY="234.0" onAction="#test" prefHeight="49.0" prefWidth="178.0" text="   Button" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="23.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/logo.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <JFXButton layoutX="10.0" layoutY="467.0" onAction="#test" prefHeight="49.0" prefWidth="178.0" text="   Settings" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="32.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/Settings_icon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </JFXButton>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="201.0" prefHeight="400.0" prefWidth="400.0" />
+      <AnchorPane layoutX="198.0" layoutY="-3.0" prefHeight="65.0" prefWidth="692.0" style="-fx-background-color: #0747A6;">
+         <children>
+            <JFXTextField focusColor="WHITE" layoutX="71.0" layoutY="12.0" prefHeight="41.0" prefWidth="297.0" promptText="    Search...." style="-fx-prompt-text-fill: white; -fx-text-inner-color: white; -fx-background-color: #0c50b5;" unFocusColor="#d3cece">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXTextField>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="pane_finance" layoutX="198.0" layoutY="62.0" prefHeight="486.0" prefWidth="692.0" style="-fx-background-color: white;">
+         <children>
+            <JFXTextArea layoutX="124.0" layoutY="143.0" text="Finanzen" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="pane_social" layoutX="197.0" layoutY="61.0" prefHeight="486.0" prefWidth="692.0" style="-fx-background-color: white;">
+         <children>
+            <TextField layoutX="213.0" layoutY="200.0" prefHeight="175.0" prefWidth="305.0" text="Social">
+               <font>
+                  <Font size="64.0" />
+               </font>
+            </TextField>
+         </children></AnchorPane>
    </children>
 </AnchorPane>
