--- a/JPasswortBunker/src/jpasswortbunker/mgm/gui/MainInterface.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/gui/MainInterface.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,7 +14,7 @@
    <children>
       <AnchorPane layoutX="-3.0" prefHeight="548.0" prefWidth="201.0" style="-fx-background-color: #0747A6;">
          <children>
-            <JFXButton fx:id="btn_finance" layoutX="11.0" layoutY="65.0" onAction="#btn_finance" prefHeight="49.0" prefWidth="178.0" text="   Finance" textFill="WHITE">
+            <JFXButton fx:id="btn_finance" layoutX="12.0" layoutY="82.0" onAction="#btn_finance" prefHeight="49.0" prefWidth="178.0" text="   Finance" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
@@ -25,7 +26,7 @@
                   </ImageView>
                </graphic>
             </JFXButton>
-            <JFXButton fx:id="btn_social" layoutX="11.0" layoutY="120.0" onAction="#btn_social" prefHeight="49.0" prefWidth="178.0" text="   Social" textFill="WHITE">
+            <JFXButton fx:id="btn_social" layoutX="12.0" layoutY="137.0" onAction="#btn_social" prefHeight="49.0" prefWidth="178.0" text="   Social" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
@@ -37,7 +38,7 @@
                   </ImageView>
                </graphic>
             </JFXButton>
-            <JFXButton fx:id="btn_email" layoutX="11.0" layoutY="176.0" onAction="#btn_email" prefHeight="49.0" prefWidth="178.0" text="   E-Mail" textFill="WHITE">
+            <JFXButton fx:id="btn_email" layoutX="12.0" layoutY="193.0" onAction="#btn_email" prefHeight="49.0" prefWidth="178.0" text="   E-Mail" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
@@ -49,7 +50,7 @@
                   </ImageView>
                </graphic>
             </JFXButton>
-            <JFXButton fx:id="btn_network" layoutX="11.0" layoutY="234.0" onAction="#btn_network" prefHeight="49.0" prefWidth="178.0" text="Network" textFill="WHITE">
+            <JFXButton fx:id="btn_network" layoutX="12.0" layoutY="251.0" onAction="#btn_network" prefHeight="49.0" prefWidth="178.0" text="Network" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
@@ -73,6 +74,11 @@
                   </ImageView>
                </graphic>
             </JFXButton>
+            <ImageView fitHeight="65.0" fitWidth="106.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/logo.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <AnchorPane layoutX="198.0" layoutY="-3.0" prefHeight="65.0" prefWidth="692.0" style="-fx-background-color: #0747A6;">
@@ -97,5 +103,34 @@
                </font>
             </TextField>
          </children></AnchorPane>
+      <AnchorPane fx:id="pane_email" layoutX="196.0" layoutY="60.0" prefHeight="486.0" prefWidth="692.0" style="-fx-background-color: white;">
+         <children>
+            <TextField layoutX="213.0" layoutY="200.0" prefHeight="175.0" prefWidth="305.0" text="E-Mail">
+               <font>
+                  <Font size="64.0" />
+               </font>
+            </TextField>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="pane_network" layoutX="195.0" layoutY="60.0" prefHeight="486.0" prefWidth="692.0" style="-fx-background-color: white;">
+         <children>
+            <TextField layoutX="213.0" layoutY="200.0" prefHeight="175.0" prefWidth="305.0" text="Network">
+               <font>
+                  <Font size="64.0" />
+               </font>
+            </TextField>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="pane_settings" layoutX="195.0" layoutY="60.0" prefHeight="486.0" prefWidth="692.0" style="-fx-background-color: white;">
+         <children>
+            <TextField layoutX="213.0" layoutY="200.0" prefHeight="175.0" prefWidth="305.0" text="Settings">
+               <font>
+                  <Font size="64.0" />
+               </font>
+            </TextField>
+            <JFXToggleButton layoutX="42.0" layoutY="37.0" text="Autosave" unToggleColor="WHITE" />
+            <JFXToggleButton layoutX="42.0" layoutY="111.0" text="was auch immer" unToggleColor="WHITE" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
