--- a/JPasswortBunker/src/jpasswortbunker/mgm/gui/MainInterface.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/gui/MainInterface.fxml
@@ -4,6 +4,8 @@
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXToggleButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -14,7 +16,7 @@
    <children>
       <AnchorPane layoutX="-3.0" prefHeight="548.0" prefWidth="201.0" style="-fx-background-color: #0747A6;">
          <children>
-            <JFXButton fx:id="btn_finance" layoutX="12.0" layoutY="82.0" onAction="#btn_finance" prefHeight="49.0" prefWidth="178.0" text="   Finance" textFill="WHITE">
+            <JFXButton fx:id="btn_newEntry" layoutX="12.0" layoutY="82.0" onAction="#btn_finance" prefHeight="49.0" prefWidth="178.0" text="   Finance" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
@@ -74,7 +76,7 @@
                   </ImageView>
                </graphic>
             </JFXButton>
-            <ImageView fitHeight="65.0" fitWidth="106.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="btn_logo" fitHeight="65.0" fitWidth="106.0" layoutX="14.0" layoutY="14.0" onMouseClicked="#btn_logo" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/logo.png" />
                </image>
@@ -83,11 +85,23 @@
       </AnchorPane>
       <AnchorPane layoutX="198.0" layoutY="-3.0" prefHeight="65.0" prefWidth="692.0" style="-fx-background-color: #0747A6;">
          <children>
-            <JFXTextField focusColor="WHITE" layoutX="71.0" layoutY="12.0" prefHeight="41.0" prefWidth="297.0" promptText="    Search...." style="-fx-prompt-text-fill: white; -fx-text-inner-color: white; -fx-background-color: #0c50b5;" unFocusColor="#d3cece">
+            <JFXTextField focusColor="WHITE" layoutX="184.0" layoutY="12.0" prefHeight="41.0" prefWidth="297.0" promptText="    Search...." style="-fx-prompt-text-fill: white; -fx-text-inner-color: white; -fx-background-color: #0c50b5;" unFocusColor="#d3cece">
                <font>
                   <Font size="18.0" />
                </font>
             </JFXTextField>
+            <JFXButton layoutY="11.0" onAction="#btn_newEntry" text="NEW Entry" textFill="WHITE">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="27.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/logo.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="pane_finance" layoutX="198.0" layoutY="62.0" prefHeight="486.0" prefWidth="692.0" style="-fx-background-color: white;">
@@ -130,6 +144,19 @@
             </TextField>
             <JFXToggleButton layoutX="42.0" layoutY="37.0" text="Autosave" unToggleColor="WHITE" />
             <JFXToggleButton layoutX="42.0" layoutY="111.0" text="was auch immer" unToggleColor="WHITE" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="pane_start" layoutX="193.0" layoutY="57.0" prefHeight="486.0" prefWidth="692.0" style="-fx-background-color: white;">
+         <children>
+            <TableView layoutX="-2.0" prefHeight="486.0" prefWidth="692.0">
+              <columns>
+                <TableColumn prefWidth="36.0" text="ID" />
+                  <TableColumn prefWidth="129.33331298828125" text="Title" />
+                <TableColumn prefWidth="136.0" text="Username" />
+                  <TableColumn minWidth="0.0" prefWidth="137.33331298828125" text="URL" />
+                  <TableColumn prefWidth="252.0" text="Description" />
+              </columns>
+            </TableView>
          </children>
       </AnchorPane>
    </children>
