--- a/JPasswortBunker/src/jpasswortbunker/mgm/gui/SetMasterPassword.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/gui/SetMasterPassword.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="300.0" maxWidth="300.0" minHeight="300.0" minWidth="300.0" prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.gui.images.SetMasterKeyController">
+<AnchorPane maxHeight="300.0" maxWidth="300.0" minHeight="300.0" minWidth="300.0" prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.gui.SetMasterPasswordController">
    <children>
       <Button layoutX="132.0" layoutY="220.0" mnemonicParsing="false" onAction="#correctMasterKey" text="OK" />
       <ImageView fitHeight="58.0" fitWidth="109.0" layoutX="106.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true">
