--- a/JPasswortBunker/src/jpasswortbunker/mgm/gui/NewEntry.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/gui/NewEntry.fxml
@@ -5,32 +5,41 @@
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="412.0" prefWidth="431.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300.0" minWidth="300.0" prefHeight="372.0" prefWidth="311.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane prefHeight="66.0" prefWidth="431.0" style="-fx-background-color: blue;">
+      <JFXTextField layoutX="85.0" layoutY="102.0" promptText="Title" />
+      <AnchorPane prefHeight="66.0" prefWidth="311.0" style="-fx-background-color: #0747A6;">
          <children>
-            <Label layoutX="54.0" layoutY="15.0" text="NEW ENTRY" textFill="WHITE">
+            <Label layoutX="91.0" layoutY="16.0" text="NEW ENTRY" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <JFXTextField layoutX="99.0" layoutY="94.0" promptText="Title" />
-      <JFXTextField layoutX="99.0" layoutY="132.0" promptText="Username" />
-      <JFXPasswordField layoutX="99.0" layoutY="173.0" promptText="Password" />
-      <JFXPasswordField layoutX="98.0" layoutY="215.0" promptText="Repeat Password" />
-      <JFXTextField layoutX="99.0" layoutY="256.0" promptText="URL" />
-      <JFXTextArea layoutX="98.0" layoutY="320.0" prefHeight="81.0" prefWidth="263.0" promptText="Description" unFocusColor="WHITE" />
-      <Label layoutX="98.0" layoutY="303.0" prefHeight="17.0" prefWidth="81.0" text="Descripntion" />
-      <JFXButton layoutX="336.0" layoutY="320.0" text="OK">
+      <JFXTextField layoutX="85.0" layoutY="135.0" promptText="Username" />
+      <JFXPasswordField layoutX="85.0" layoutY="174.0" promptText="Password" />
+      <JFXPasswordField layoutX="85.0" layoutY="217.0" promptText="Repeat Password" />
+      <JFXTextField layoutX="85.0" layoutY="256.0" promptText="URL" />
+      <JFXTextArea layoutX="88.0" layoutY="320.0" prefHeight="44.0" prefWidth="104.0" promptText="Description" unFocusColor="WHITE" />
+      <Label layoutX="88.0" layoutY="297.0" prefHeight="17.0" prefWidth="81.0" text="Descripntion" />
+      <JFXButton layoutX="181.0" layoutY="291.0" text="OK">
          <font>
             <Font size="14.0" />
          </font>
       </JFXButton>
+      <MenuButton id="Categorie_MenuBox" fx:id="Categorie_MenuBox" layoutX="111.0" layoutY="77.0" mnemonicParsing="false" text="Categorie" textOverrun="CLIP">
+        <items>
+          <MenuItem mnemonicParsing="false" text="Finance" />
+          <MenuItem mnemonicParsing="false" text="Social" />
+            <MenuItem mnemonicParsing="false" text="E-Mail" />
+            <MenuItem mnemonicParsing="false" text="Network" />
+        </items>
+      </MenuButton>
    </children>
 </AnchorPane>
