--- a/JPasswortBunker/src/jpasswortbunker/mgm/gui/MainInterface.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/gui/MainInterface.fxml
@@ -4,7 +4,11 @@
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXToggleButton?>
+<?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -13,9 +17,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.gui.MainInterfaceController">
+<AnchorPane prefHeight="625.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.gui.MainInterfaceController">
    <children>
-      <AnchorPane id="topBar" layoutX="200.0" prefHeight="70.0" prefWidth="700.0">
+      <AnchorPane id="topBar" layoutX="200.0" layoutY="25.0" prefHeight="70.0" prefWidth="700.0" stylesheets="@style/default_style.css">
          <children>
             <JFXTextField focusColor="WHITE" layoutX="184.0" layoutY="12.0" prefHeight="41.0" prefWidth="297.0" promptText="    Search...." style="-fx-prompt-text-fill: white; -fx-text-inner-color: white; -fx-background-color: #0c50b5;" unFocusColor="#d3cece">
                <font>
@@ -34,7 +38,7 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane id="sideBar" prefHeight="600.0" prefWidth="200.0" stylesheets="@style/default_style.css">
+      <AnchorPane id="sideBar" layoutY="25.0" prefHeight="600.0" prefWidth="200.0" stylesheets="@style/default_style.css">
          <children>
             <JFXButton fx:id="btn_newEntry" layoutX="11.0" layoutY="101.0" onAction="#btn_finance" prefHeight="49.0" prefWidth="178.0" text="   Finance" textFill="WHITE">
                <font>
@@ -103,12 +107,7 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="pane_finance" layoutX="200.0" layoutY="70.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
-         <children>
-            <JFXTextArea layoutX="171.0" layoutY="156.0" text="Finanzen" />
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="pane_network" layoutX="200.0" layoutY="70.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
+      <AnchorPane fx:id="pane_network" layoutX="200.0" layoutY="95.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
          <children>
             <TextField layoutX="213.0" layoutY="200.0" prefHeight="175.0" prefWidth="305.0" text="Network">
                <font>
@@ -117,7 +116,7 @@
             </TextField>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="pane_email" layoutX="200.0" layoutY="70.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
+      <AnchorPane fx:id="pane_email" layoutX="200.0" layoutY="95.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
          <children>
             <TextField layoutX="213.0" layoutY="200.0" prefHeight="175.0" prefWidth="305.0" text="E-Mail">
                <font>
@@ -126,7 +125,7 @@
             </TextField>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="pane_social" layoutX="200.0" layoutY="70.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
+      <AnchorPane fx:id="pane_social" layoutX="200.0" layoutY="95.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
          <children>
             <TextField layoutX="213.0" layoutY="200.0" prefHeight="175.0" prefWidth="305.0" text="Social">
                <font>
@@ -134,7 +133,7 @@
                </font>
             </TextField>
          </children></AnchorPane>
-      <AnchorPane fx:id="pane_settings" layoutX="200.0" layoutY="70.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
+      <AnchorPane fx:id="pane_settings" layoutX="200.0" layoutY="95.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
          <children>
             <TextField layoutX="213.0" layoutY="200.0" prefHeight="175.0" prefWidth="305.0" text="Settings">
                <font>
@@ -145,11 +144,11 @@
             <JFXToggleButton layoutX="42.0" layoutY="111.0" text="was auch immer" unToggleColor="WHITE" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="pane_start" layoutX="200.0" layoutY="70.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
+      <AnchorPane fx:id="pane_start" layoutX="200.0" layoutY="95.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
          <children>
-            <TableView fixedCellSize="0.0" prefHeight="530.0" prefWidth="700.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <TableView fx:id="table" fixedCellSize="0.0" prefHeight="530.0" prefWidth="700.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columns>
-                <TableColumn prefWidth="36.0" text="ID" />
+                <TableColumn fx:id="columnID" prefWidth="36.0" text="ID" />
                   <TableColumn prefWidth="129.33331298828125" text="Title" />
                 <TableColumn prefWidth="136.0" text="Username" />
                   <TableColumn minWidth="0.0" prefWidth="137.33331298828125" text="URL" />
@@ -159,6 +158,34 @@
                   <Insets />
                </opaqueInsets>
             </TableView>
+         </children>
+      </AnchorPane>
+      <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="900.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="New Masterpassword" />
+                  <MenuItem mnemonicParsing="false" text="Clear Database" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="New Entry" />
+                  <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About" />
+                  <MenuItem mnemonicParsing="false" text="Help" />
+               </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <AnchorPane fx:id="pane_finance" layoutX="200.0" layoutY="95.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
+         <children>
+            <JFXTextArea layoutX="177.0" layoutY="335.0" text="Finanzen" />
+            <JFXTreeTableView fx:id="treeView" layoutX="14.0" layoutY="22.0" prefHeight="242.0" prefWidth="626.0" />
          </children>
       </AnchorPane>
    </children>
