--- a/JPasswortBunker/src/jpasswortbunker/mgm/gui/NewEntry.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/gui/NewEntry.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300.0" minWidth="300.0" prefHeight="435.0" prefWidth="389.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.gui.NewEntryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.gui.NewEntryController">
    <children>
-      <AnchorPane prefHeight="66.0" prefWidth="389.0" style="-fx-background-color: #0747A6;">
+      <AnchorPane prefHeight="66.0" prefWidth="400.0" style="-fx-background-color: #0747A6;">
          <children>
             <Label layoutX="91.0" layoutY="16.0" text="NEW ENTRY" textFill="WHITE">
                <font>
@@ -20,18 +20,23 @@
             </Label>
          </children>
       </AnchorPane>
-      <JFXTextField layoutX="50.0" layoutY="102.0" promptText="Title" />
-      <JFXTextField layoutX="50.0" layoutY="140.0" promptText="Username" />
-      <JFXPasswordField layoutX="50.0" layoutY="176.0" promptText="Password" />
-      <JFXPasswordField layoutX="50.0" layoutY="218.0" promptText="Repeat Password" />
-      <JFXTextField layoutX="50.0" layoutY="256.0" promptText="URL" />
-      <JFXTextArea layoutX="50.0" layoutY="338.0" prefHeight="75.0" prefWidth="222.0" style="-fx-background-color: lightgrey;" unFocusColor="WHITE" />
-      <Label layoutX="50.0" layoutY="313.0" prefHeight="17.0" prefWidth="81.0" text="Descripntion" />
-      <JFXButton layoutX="294.0" layoutY="368.0" prefHeight="45.0" prefWidth="74.0" style="-fx-background-color: #0747A6;" text="OK" textFill="WHITE">
+      <JFXTextField fx:id="tfTitle" layoutX="50.0" layoutY="75.0" promptText="Title" />
+      <JFXTextField fx:id="tfUsername" layoutX="50.0" layoutY="113.0" promptText="Username" />
+      <JFXPasswordField fx:id="pf1" layoutX="50.0" layoutY="149.0" promptText="Password" />
+      <JFXPasswordField fx:id="pf2" layoutX="50.0" layoutY="191.0" promptText="Repeat Password" />
+      <JFXTextField fx:id="tfURL" layoutX="50.0" layoutY="229.0" promptText="URL" />
+      <JFXTextArea fx:id="taDescription" layoutX="50.0" layoutY="311.0" prefHeight="75.0" prefWidth="222.0" style="-fx-background-color: lightgrey;" unFocusColor="WHITE" />
+      <Label layoutX="50.0" layoutY="286.0" prefHeight="17.0" prefWidth="81.0" text="Descripntion" />
+      <JFXButton fx:id="btn_save" layoutX="303.0" layoutY="341.0" onAction="#btn_save" prefHeight="45.0" prefWidth="74.0" style="-fx-background-color: #0747A6;" text="OK" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </JFXButton>
-      <JFXComboBox fx:id="comboBox" layoutX="272.0" layoutY="102.0" prefHeight="25.0" prefWidth="96.0" promptText="Categorie" unFocusColor="#fffafa" />
+      <JFXComboBox fx:id="comboBox" focusColor="WHITE" layoutX="265.0" layoutY="75.0" prefHeight="25.0" prefWidth="96.0" unFocusColor="#fffafa" />
+      <Label fx:id="labelErrorMessage" layoutX="208.0" layoutY="278.0" prefHeight="20.0" prefWidth="173.0" textAlignment="CENTER" textFill="RED">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
