--- a/JPasswortBunker/src/jpasswortbunker/mgm/Kopp/LoginScreen.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/Kopp/LoginScreen.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" prefHeight="308.0" prefWidth="390.0" vgap="10" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.gui.LoginScreenController">
+<GridPane alignment="center" hgap="10" prefHeight="308.0" prefWidth="390.0" vgap="10" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.Kopp.LoginScreenController">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
