--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/MainInterface.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/MainInterface.fxml
@@ -22,7 +22,7 @@
                   <Font size="18.0" />
                </font>
             </JFXTextField>
-            <JFXButton layoutX="14.0" layoutY="11.0" prefHeight="44.0" prefWidth="156.0" text="NEW Entry" textFill="WHITE">
+            <JFXButton layoutX="14.0" layoutY="11.0" onAction="#btn_newEntry" prefHeight="44.0" prefWidth="156.0" text="NEW Entry" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
