--- a/JPasswortBunker/src/jpasswortbunker/mgm/gui/RecycleBin.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/gui/RecycleBin.fxml
@@ -4,12 +4,13 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.view.style.RecycleController">
    <children>
-      <JFXTreeTableView layoutX="-3.0" layoutY="26.0" prefHeight="374.0" prefWidth="607.0" />
+      <JFXTreeTableView layoutX="69.0" layoutY="27.0" prefHeight="373.0" prefWidth="535.0" />
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="604.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
@@ -29,5 +30,10 @@
           </Menu>
         </menus>
       </MenuBar>
+      <ImageView fitHeight="44.0" fitWidth="48.0" layoutX="14.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="images/logo.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
