--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/NewEntry.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/NewEntry.fxml
@@ -22,12 +22,12 @@
             </Label>
          </children>
       </AnchorPane>
-      <JFXTextField fx:id="tfTitle" layoutX="16.0" layoutY="75.0" prefHeight="25.0" prefWidth="234.0" promptText="Title" />
-      <JFXTextField fx:id="tfUsername" layoutX="16.0" layoutY="113.0" prefHeight="25.0" prefWidth="234.0" promptText="Username" />
-      <JFXPasswordField fx:id="pf1" layoutX="16.0" layoutY="149.0" prefHeight="25.0" prefWidth="234.0" promptText="Password" />
-      <JFXPasswordField fx:id="pf2" layoutX="16.0" layoutY="191.0" prefHeight="25.0" prefWidth="234.0" promptText="Repeat Password" />
-      <JFXTextField fx:id="tfURL" layoutX="16.0" layoutY="229.0" prefHeight="25.0" prefWidth="234.0" promptText="URL" />
-      <JFXTextArea fx:id="taDescription" layoutX="15.0" layoutY="311.0" prefHeight="75.0" prefWidth="257.0" style="-fx-background-color: lightgrey;" unFocusColor="WHITE" />
+      <JFXTextField fx:id="textFieldTitle" layoutX="16.0" layoutY="75.0" prefHeight="25.0" prefWidth="234.0" promptText="Title" />
+      <JFXTextField fx:id="textFieldUsername" layoutX="16.0" layoutY="113.0" prefHeight="25.0" prefWidth="234.0" promptText="Username" />
+      <JFXPasswordField fx:id="passwordField1" layoutX="16.0" layoutY="149.0" prefHeight="25.0" prefWidth="234.0" promptText="Password" />
+      <JFXPasswordField fx:id="passwordField2" layoutX="16.0" layoutY="191.0" prefHeight="25.0" prefWidth="234.0" promptText="Repeat Password" />
+      <JFXTextField fx:id="textFieldURL" layoutX="16.0" layoutY="229.0" prefHeight="25.0" prefWidth="234.0" promptText="URL" />
+      <JFXTextArea fx:id="textAreaDescription" layoutX="15.0" layoutY="311.0" prefHeight="75.0" prefWidth="257.0" style="-fx-background-color: lightgrey;" unFocusColor="WHITE" />
       <Label layoutX="16.0" layoutY="290.0" prefHeight="17.0" prefWidth="81.0" text="Descripntion" />
       <JFXButton fx:id="btn_save" layoutX="303.0" layoutY="341.0" onAction="#btn_save" prefHeight="45.0" prefWidth="74.0" style="-fx-background-color: #0747A6;" text="OK" textFill="WHITE">
          <font>
@@ -58,5 +58,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
+      <JFXTextField fx:id="textFieldPassword1" layoutX="15.0" layoutY="149.0" prefHeight="25.0" prefWidth="234.0" />
+      <JFXTextField fx:id="textFieldPassword2" layoutX="14.0" layoutY="191.0" prefHeight="25.0" prefWidth="234.0" />
    </children>
 </AnchorPane>
