--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/MainInterface.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/MainInterface.fxml
@@ -2,17 +2,17 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import com.jfoenix.controls.JFXToggleButton?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.TextFlow?>
 
 <AnchorPane fx:id="mainAnchorPane" prefHeight="625.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.view.MainInterfaceController">
    <children>
@@ -123,38 +123,44 @@
       </AnchorPane>
       <AnchorPane fx:id="pane_settings" layoutX="200.0" layoutY="95.0" prefHeight="530.0" prefWidth="700.0" style="-fx-background-color: white;">
          <children>
-            <TextFlow prefHeight="55.0" prefWidth="700.0" AnchorPane.leftAnchor="0.0">
+            <AnchorPane />
+            <GridPane>
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
                   <JFXTextField editable="false" text="Anzahl BackEntries:">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </JFXTextField>
-                  <JFXTextField fx:id="textField_backupEntries" alignment="CENTER" editable="false">
+                  <JFXTextField fx:id="textField_settings_backupEntries" alignment="CENTER" style="-fx-background-color: lightgrey;" GridPane.columnIndex="1">
                      <font>
-                        <Font name="System Bold" size="14.0" />
+                        <Font name="System Bold Italic" size="14.0" />
                      </font>
                   </JFXTextField>
-                  <JFXTextField promptText="Anzahl ändern...">
-                     <font>
-                        <Font name="System Italic" size="14.0" />
-                     </font>
-                  </JFXTextField>
-                  <JFXButton ripplerFill="#276fc6" text="OK" textAlignment="CENTER">
+                  <JFXButton fx:id="btn_settings_numberBackupEntriesOk" onAction="#btn_settings_setNumberBackupEntries" ripplerFill="#276fc6" style="-fx-background-color: orange;" text="OK" textAlignment="CENTER" GridPane.columnIndex="2">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </JFXButton>
+                  <JFXTextField fx:id="textField_settings_saveStatus" editable="false" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </JFXTextField>
                </children>
-            </TextFlow>
-            <TextField layoutX="213.0" layoutY="200.0" prefHeight="175.0" prefWidth="305.0" text="Settings">
-               <font>
-                  <Font size="64.0" />
-               </font>
-            </TextField>
-            <JFXToggleButton layoutX="42.0" layoutY="37.0" text="Autosave" unToggleColor="WHITE" />
-            <JFXToggleButton layoutX="42.0" layoutY="111.0" text="was auch immer" unToggleColor="WHITE" />
-            <AnchorPane />
+            </GridPane>
          </children>
       </AnchorPane>
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="900.0">
